// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption should render correctly with news ServiceContext 1`] = `
<StyledCaption>
  <ServiceContextConsumer>
    <Component />
  </ServiceContextConsumer>
  This is some Caption text
</StyledCaption>
`;

exports[`Caption should render correctly with news ServiceContext 2`] = `
<StyledCaption>
  <ServiceContextConsumer>
    <Component />
  </ServiceContextConsumer>
  توصیف چیزی که اتفاق می افتد
</StyledCaption>
`;
